--- a/views/backstage/header.html
+++ b/views/backstage/header.html
@@ -12,7 +12,7 @@
 
 <body>
 <div class="super-header clearfix">
-    <h2>网站后台管理系统</h2>
+    <!-- <h2>网站后台管理系统</h2>-->
     <div class="head-right">
         <i class="ico-user"></i>当前用户：
         <div class="userslideDown">
