--- a/views/index.html
+++ b/views/index.html
@@ -34,7 +34,7 @@
         <!--main-->
 
         <div class="superCtab superCtabBot">
-            <iframe src="/backstage/wenzhang.html" id="Mainindex" name="Mainindex" width="100%"
+            <iframe src="/backstage/article_manage.html" id="Mainindex" name="Mainindex" width="100%"
                     height="100%" marginheight="0" marginwidth="0" frameborder="0"></iframe>
 
         </div>
