--- a/views/articleManage/article_add.html
+++ b/views/articleManage/article_add.html
@@ -56,5 +56,8 @@
 
 </div>
 <script src="/js/articleManage.js"></script>
+<script>
+    var ue = UE.getEditor('editor');
+</script>
 </body>
 </html>
